@@ -1,4 +1,15 @@
-#Settlers of Catan
+## About this Project
 
-Run>Edit Configuration>Modify Options> Add VM Options> Paste
---module-path "javafx-sdk-17.0.1/lib" --add-modules javafx.controls,javafx.fxml
+This project is a recreation of the board game _Settlers of Catan_ in Java. The graphical interface was made using JavaFX and was written entirely in Java. Settlers of Catan is a 3-4 player competitive multiplayer board game in which players must gather resources and build roads, settlements, and cities in attempts to be the first to 10 victory points. Players are given the choice between building, using a card, and trading.
+
+### How to Play
+
+[View the official rules](https://www.catan.com/sites/prod/files/2021-06/catan_base_rules_2020_200707.pdf)
+
+To view the instructions in the application, press the "Help" button or the "?" button in game to view them.
+
+### Instructions
+
+1. [Download](https://www.oracle.com/java/technologies/downloads/) the latest JRE to be able to open the .jar file
+2. [Download](https://github.com/nitheesh-cpu/SettlersOfCatan/releases/download/Download/Catan.jar) the project .jar file from the GitHub
+3. Run the file
